WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
40000
[Qt] QGraphicsWebView crash when calling setScale() before setUrl()
https://bugs.webkit.org/show_bug.cgi?id=40000
Summary
[Qt] QGraphicsWebView crash when calling setScale() before setUrl()
Alan Alpert
Reported
2010-06-01 08:24:50 PDT
Created
attachment 57546
[details]
Program that reproduces bug QGraphicsWebView crashes if you set the contentsScale before the URL/HTML. Attached is an example program which crashes on startup for this reason. Built against the Webkit included in Qt 4.7 (at June 1, commit 283e899c7d57c003facc5ed8aef8e5dacf2eb945, I guessed a version from that field's options because bugzilla gets an internal server error without it).
Attachments
Program that reproduces bug
(2.17 KB, application/x-compressed-tar)
2010-06-01 08:24 PDT
,
Alan Alpert
no flags
Details
Proposed patch
(2.12 KB, patch)
2010-06-28 00:13 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-06-08 11:16:04 PDT
Thanks. If you have stack trace for the crash that would be useful - otherwise we should be able to collect that.
Andreas Kling
Comment 2
2010-06-28 00:13:25 PDT
Created
attachment 59876
[details]
Proposed patch
Simon Hausmann
Comment 3
2010-06-28 00:18:55 PDT
Comment on
attachment 59876
[details]
Proposed patch r=me Nice bug number :)
WebKit Commit Bot
Comment 4
2010-06-28 00:36:07 PDT
Comment on
attachment 59876
[details]
Proposed patch Clearing flags on attachment: 59876 Committed
r61984
: <
http://trac.webkit.org/changeset/61984
>
WebKit Commit Bot
Comment 5
2010-06-28 00:36:11 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6
2010-06-28 01:58:11 PDT
Revision
r61984
cherry-picked into qtwebkit-2.0 with commit 19f5af1665ba3f2d99a0f68a23e10d3920271aad
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug