2010-06-28  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] QGraphicsWebView crash when calling setScale() before setUrl()
        https://bugs.webkit.org/show_bug.cgi?id=40000

        Check 'page' before dereference in _q_scaleChanged()
        Autotest included.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::_q_scaleChanged):
        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::crashOnSetScaleBeforeSetUrl):

Canonical link: https://commits.webkit.org/52964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61984 268f45cc-cd09-0410-ab3c-d52691b4dbfc